# portfolio

./: pyproject.toml  reqirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: styles.css
blog/templates/: 404.html
blog/templates/blog/: admin_template.html  author_details.html  base.html  blog.html  home.html  view_article.html  view_category.html  view_repository.html
blog/templatetags/: random_color.py  responsive_image.py
cms/: admin.py  models.py  urls.py  views.py
cms/migrations/: 0001_initial.py  0002_rename_skills_skill.py
portfolio/: settings.py  urls.py
